# advent_2021

./: .editorconfig  Cargo.toml  README.md
fsharp/: .envrc  Directory.Build.props  advent_2021  advent_2021.sln  flake.nix  paket.dependencies
fsharp/.config/: dotnet-tools.json
fsharp/src/Advent2021/: Advent2021.fsproj  Cli.fs  Program.fs  paket.references
fsharp/src/Advent2021/Solutions/: Day1.fs  Day10.fs  Day11.fs  Day12.fs  Day13.fs  Day14.fs  Day15.fs  Day16.fs  Day17.fs  Day18.fs  Day2.fs  Day9.fs  Support.fs
fsharp/tests/Advent2021.Tests/: Advent2021.Tests.fsproj  Program.fs  Support.fs  paket.references
fsharp/tests/Advent2021.Tests/Solutions/: Day1.fs  Day10.fs  Day11.fs  Day12.fs  Day13.fs  Day14.fs  Day15.fs  Day16.fs  Day17.fs  Day18.fs  Day2.fs  Day3.fs  Day9.fs
rust/: Cargo.toml  flake.nix
rust/src/: app.rs  macros.rs  main.rs  util.rs
rust/src/days/: day1.rs  day3.rs  mod.rs
rust/src/days/day1/: mod.rs
rust/src/days/day15/: graph.rs  mod.rs
rust/src/days/day2/: mod.rs  program.rs
rust/src/days/day3/: mod.rs  report.rs
rust/src/days/day4/: mod.rs
rust/src/days/day4/bingo/: board.rs  draws.rs  game.rs  mod.rs
rust/src/days/day5/: bitmap.rs  command_list.rs  mod.rs
rust/src/days/day6/: fish.rs  mod.rs
rust/src/days/day7/: crabs.rs  mod.rs
rust/src/days/day8/: display.rs  mod.rs
rust/src/days/day9/: heightmap.rs  mod.rs
src/: app.rs  macros.rs  main.rs
src/days/: day1.rs  day3.rs  mod.rs
src/days/day2/: command.rs  mod.rs
