[package]
name = "advent_2021"
version = "2021.12.3"
edition = "2021"
rust-version = "1.56"

repository = "https://github.com/reckenrode/verify-archive"
license = "GPL-3.0-only"
readme = "README.md"

authors = ["Randy Eckenrode <randy@largeandhighquality.com>"]
description = "My solutions for Advent of Code 2021"

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.5"
nom = "7.1"
num-bigint = "0.4"
