[package]
name = "advent_2021"
version = "2021.12.8"
edition = "2021"
rust-version = "1.56"

repository = "https://github.com/reckenrode/verify-archive"
license = "GPL-3.0-only"
readme = "README.md"

authors = ["Randy Eckenrode <randy@largeandhighquality.com>"]
description = "My solutions for Advent of Code 2021"

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.5"
itertools = "0.10"
nom = "7.1"
num-bigint = "0.4"
num-traits = "0.2"
phf = { version = "0.10", features = ["macros"] }

[profile.release]
incremental = false
debug = 0 # Set this to 1 or 2 to get more useful backtraces in debugger.
lto = true
codegen-units = 1
