[package]
name = "advent_2021"
version = "2021.12.15"
edition = "2021"
rust-version = "1.56"

repository = "https://github.com/reckenrode/verify-archive"
license = "GPL-3.0-only"
readme = "README.md"

authors = ["Randy Eckenrode <randy@largeandhighquality.com>"]
description = "My solutions for Advent of Code 2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.0.0-rc.0", features = ["derive"] }
itertools = "0.10"
nom = "7.1"
num-bigint = "0.4"
num-traits = "0.2"
paste = "1.0"
phf = { version = "0.10", features = ["macros"] }
priority-queue = "1.2"

[profile.release]
incremental = false
debug = 0 # Set this to 1 or 2 to get more useful backtraces in debugger.
lto = true
codegen-units = 1
